--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
     "axios": "^0.18.0",
     "register-service-worker": "^1.5.2",
     "vue": "^2.5.17",
+    "vue-material-design-icons": "^2.4.0",
     "vue-router": "^3.0.1",
-    "vuejs-paginate": "^2.0.1",
+    "vuejs-paginate": "1.9.4",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
