--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "moment": "^2.22.2",
     "register-service-worker": "^1.5.2",
     "vue": "^2.5.17",
     "vue-material-design-icons": "^2.4.0",
