--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "moment": "^2.22.2",
     "register-service-worker": "^1.5.2",
     "vue": "^2.5.17",
+    "vue-js-modal": "^1.3.27",
     "vue-material-design-icons": "^2.4.0",
     "vue-router": "^3.0.1",
     "vuejs-paginate": "1.9.4",
