--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "vue-js-modal": "^1.3.27",
     "vue-material-design-icons": "^2.4.0",
     "vue-router": "^3.0.1",
+    "vuedraggable": "^2.17.0",
     "vuejs-paginate": "1.9.4",
     "vuex": "^3.0.1"
   },
