--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "vue-router": "^3.0.1",
     "vuedraggable": "^2.17.0",
     "vuejs-paginate": "1.9.4",
+    "vuelidate": "^0.7.4",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
